[gd_scene load_steps=8 format=3 uid="uid://brxnmcufd6edq"]

[ext_resource type="Script" path="res://addons/anima/ui/AnimationPicker/AnimationPicker.gd" id="1_cyqje"]
[ext_resource type="PackedScene" uid="uid://hrxmgulob80r" path="res://addons/anima/ui/AnimationPicker/CTAPrimaryButton.tscn" id="2_6r4ts"]
[ext_resource type="Texture2D" uid="uid://bxufb8w78e7ja" path="res://addons/anima/resources/anima-preview.png" id="2_pk6n6"]
[ext_resource type="PackedScene" uid="uid://0luo7c2dwb4l" path="res://addons/anima/ui/AnimationPicker/CTASecondaryButton.tscn" id="3_qvnfb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ikkc"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcx2w"]
bg_color = Color(0.8, 0.8, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6myxi"]

[node name="AnimationPicker" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyqje")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0ikkc")

[node name="Animations" type="HBoxContainer" parent="TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="TabContainer/Animations"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlContainer" type="CenterContainer" parent="TabContainer/Animations/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -13.0
offset_right = 25.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteDemo" type="Sprite2D" parent="TabContainer/Animations/Control/ControlContainer"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(152.5, 66)
texture = ExtResource("2_pk6n6")

[node name="DemoLabel" type="Label" parent="TabContainer/Animations/Control/ControlContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 92
text = "Anima"

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Animations"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kcx2w")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Animations"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Animations/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6myxi")

[node name="ListContainer" type="VBoxContainer" parent="TabContainer/Animations/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Animations/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Animations/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CTAButton" parent="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_6r4ts")]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="UseAnimation" type="Button" parent="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "User Animation"

[node name="CloseButton" type="Button" parent="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="CTAButton2" parent="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_qvnfb")]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/HeaderButton" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/HeaderButton" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23619" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23619" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23624" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23624" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23629" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23629" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23635" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23635" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23641" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23641" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23656" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23656" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23670" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23670" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23675" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23675" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23681" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23681" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23687" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23687" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23692" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23692" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23697" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23697" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23702" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23702" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23704" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23704" method="_on_toggled" flags=18]
[connection signal="toggled" from="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23714" to="TabContainer/Animations/VBoxContainer/ScrollContainer/ListContainer/@Button@23714" method="_on_toggled" flags=18]
[connection signal="pressed" from="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer/UseAnimation" to="." method="_on_use_animation_pressed"]
[connection signal="pressed" from="TabContainer/Animations/VBoxContainer/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
